--- a/Doc/Bachelor Thesis/references.bib
+++ b/Doc/Bachelor Thesis/references.bib
@@ -1,8 +1,15 @@
-@book{1,
- author = {Roberto Lerusalimschy and Luiz Henrique de Figueiredo and Waldemar Celes},
- title = {Lua 5.1 Reference Manual},
- year = {2006},
- isbn = {8590379833},
- publisher = {Lua.Org},
- }
+@article{collobert2011,
+   author = {Collobert, Ronan and Weston, Jason and Bottou, L\'eon and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+   title = {Natural Language Processing (Almost) from Scratch},
+   journal = {Journal of Machine Learning Research},
+   year = {2011},
+   volume = {12},
+   pages = {2493--2537}
+   }
+   
+   @acticle{Copestake2004,
+   author = {Ann Copestake},
+   title = {Natural Language Processing},
+   year = {2004}
+   }
  
