Wrote part of Design chapter

--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -149,7 +149,7 @@ pdfkeywords={key words},%
 \newpage
 \addcontentsline{toc}{section}{\refname}
 \bibliographystyle{plain}
-\bibliography{references.bib}
+\bibliography{references}
 
 %%
 %% Appendix
