--- a/Doc/Bachelor Thesis/references.bib
+++ b/Doc/Bachelor Thesis/references.bib
@@ -1,15 +1,78 @@
 @article{collobert2011,
-   author = {Collobert, Ronan and Weston, Jason and Bottou, L\'eon and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
-   title = {Natural Language Processing (Almost) from Scratch},
-   journal = {Journal of Machine Learning Research},
-   year = {2011},
-   volume = {12},
-   pages = {2493--2537}
-   }
-   
-   @acticle{Copestake2004,
-   author = {Ann Copestake},
-   title = {Natural Language Processing},
-   year = {2004}
-   }
- 
+	author = {Collobert, Ronan and Weston, Jason and Bottou, L\'eon and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+	title = {Natural Language Processing (Almost) from Scratch},
+	journal = {Journal of Machine Learning Research},
+	year = {2011},
+	volume = {12},
+	pages = {2493--2537}
+}
+
+@article{Copestake2004,
+	author = {Ann Copestake},
+	title = {Natural Language Processing},
+	year = {2004}
+}
+
+@book{Bharati1995,
+	author = {Bharati, Akshar and Chaitanya, Vineet},
+	title = {Natural language processing: A Paninian perspective},
+	address = {New Delhi},
+	publisher = {Prentice Hall of India},
+	year = {2004}
+}
+
+@article{Preeti,
+	author = {Preeti and BrahmaleenKaurSidhu},
+	title = {Natural Language Processing},
+	journal = {Int.J.Computer Technology \& Applications},
+	date = {Sept-Oct 2013},
+	OPTvolume = {4 (S)},
+	OPTpages = {751--758},
+	year = {2013}
+}
+
+@inproceedings{ Bryl,
+	author = {Volha Bryl and Claudio Giuliano and Luciano Serafini and Katerina Tymoshenko},
+	title = {Supporting Natural Language Processing with Background Knowledge: Coreference Resolution Case},
+	abstract = {Systems based on statistical and machine learning methods have been shown to be extremely effective and scalable for the analysis of large amount of textual data. However, in the recent years, it becomes evident that one of the most important directions of improvement in natural language processing (NLP) tasks, like word sense disambiguation, coreference resolution, relation extraction, and other tasks related to knowledge extraction, is by exploiting semantics. While in the past, the unavailability of rich and complete semantic descriptions constituted a serious limitation of their applicability, nowadays, the Semantic Web made available a large amount of logically encoded information (e.g. ontologies, RDF(S)-data, linked data, etc.), which constitutes a valuable source of semantics. However, web semantics cannot be easily plugged into machine learning systems. Therefore the objective of this paper is to define a reference methodology for combining semantic information available in the web under the form of logical theories, with statistical methods for NLP. The major problems that we have to solve to implement our methodology concern (i) the selection of the correct and minimal knowledge among the large amount available in the web, (ii) the representation of uncertain knowledge, and (iii) the resolution and the encoding of the rules that combine knowledge retrieved from Semantic Web sources with semantics in the text. In order to evaluate the appropriateness of our approach, we present an application of the methodology to the problem of intra-document coreference resolution, and we show by means of some experiments on the standard dataset, how the injection of knowledge leads to the improvement of this task performance.},
+	booktitle = {9th International Semantic Web Conference (ISWC2010)},
+	month = {November},
+	url = {http://data.semanticweb.org/conference/iswc/2010/paper/234},
+	year = {2010}
+}
+
+@MISC{StanfordDepManual,
+	author = {Marie-catherine De Marneffe and Christopher D. Manning},
+	title = {Stanford typed dependencies manual},
+	year = {2008}
+}
+
+@article{NoSQLDBvsRealtionDB,
+	author = {Ameya Nayak and Anil Poriya and Dikshay Poojary},
+	title = {Article: Type of NOSQL Databases and its Comparison with Relational Databases},
+	journal = {International Journal of Applied Information Systems},
+	year = {2013},
+	volume = {5},
+	number = {4},
+	pages = {16-19},
+	month = {March},
+	note = {Published by Foundation of Computer Science, New York, USA}
+}
+
+@INPROCEEDINGS{MongoDBvsMySQL2015, 
+	author={Gyorodi, C. and Gyorodi, R. and Pecherle, G. and Olah, A.}, 
+	booktitle={Engineering of Modern Electric Systems (EMES), 2015 13th International Conference on}, 
+	title={A comparative study: MongoDB vs. MySQL}, 
+	year={2015}, 
+	pages={1-6}, 
+	keywords={SQL;relational databases;MongoDB;MySQL;NoSQL database technology;nonrelational database;Arrays;Computer science;Electronic mail;Indexes;Relational databases;Syntactics;MongoDB;MySQL;NoSQL;RDBMS;non-relational databases}, 
+	doi={10.1109/EMES.2015.7158433}, 
+	month={June},
+}
+
+@online{MongoDBvsMySQLCompared,
+	author = {MongoDB, Inc},
+	title = {MongoDB and MySQL Compared}},
+	date = {2015},
+	url = {https://www.mongodb.com/compare/mongodb-mysql},
+}
