--- a/Doc/Bachelor Thesis/design.tex
+++ b/Doc/Bachelor Thesis/design.tex
@@ -1,22 +1,201 @@
 \newpage
+%
+% Návrh
+%
 \ifthenelse {\boolean{bachelor}}
 {
-	\section{Design}
-	%\section{Návrh}
+	%\section{Design}
+	\section{Návrh}
 }
 {
-	\chapter{Design}
-	%\chapter{Návrh}
+	%\chapter{Design}
+	\chapter{Návrh}
 }
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+ 
+%
+% Relačná vs. nerelačná databáza
+%
 \ifthenelse {\boolean{bachelor}}
 {
-	\subsection{Subsection}
-	%\subsection{Podčasť}
+	%\subsection{Subsection}
+	\subsection{Relačná vs. nerelačná databáza}
 }
 {
-	\section{Subsection}
-	%\section{Podčasť}
+	\%section{Subsection}
+	\section{Relačná vs. nerelačná databáza}
 }
-\label{label}
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+\label{subsection:relation_vs_document_db}
+Relačné databázy boli dlhé roky populárnou a finančné nenáročnou voľbou pri tvorbe veľkých podnikateľských aplikácií. Avšak s rozmachom variácie dát v posledných rokoch sa začali objavovať a vznikať nerelačné databázy, aby pokryli požiadavky na nové aplikácie.~\cite{MongoDBvsMySQLCompared}.
+\\
+
+Relačné databázy sú momentálne používané vo väčšine súčasných aplikácií a pracujú spoľahlivo pri obmedzenom množstve dát~\cite{MongoDBvsMySQL2015}. Problém s relačným modelom relačných databáz nastáva, keď vzniká potreba aplikácie s obrovským množstvom dát. Menovite rozšíriteľnosť (angl. scalability) sa stáva najväčším problémom relačných databáz a toto viedlo k vývoju a vzniku nového modelu, NOSQL (no SQL) databáz~\cite{NoSQLDBvsRealtionDB}.
+
+NOSQL databáza narozdiel do RDBMS modelu (Relation Data Base Management System) a je
+navrhnutá aby sa bola jednoducho rozšíriteľná so zväčšovaním sa. Väčšina NOSQL databáz odstránila niektoré nepotrebné prvky RDBMS modelov, čím sa stali podstatne ľahšími a efektívnejšími ako ich náprotivok RDBMS systémy. Toto na druhej strane spôsobilo, že NOSQL model negarantuje vlastnosti ACID (Atomicity, Consistency, Isolation, Durability), ale naopak garantuje vlastnosti BASE (Basically Available, Soft state, Eventula Consistency)~\cite{NoSQLDBvsRealtionDB}.
+
+Nerelačné databázy neukladajú údaje v tabuľkách, nemajú fixnú schému a majú jednoduchý dátový model. Tieto vlastnosti im umožňujú jednoducho spracovávať neštrukturované dáta, ako sú dokumenty, e-maily a mnoho ďalších~\cite{MongoDBvsMySQL2015}. Tieto databázy sa delia na viacero druhov a čím ďalej, tým majú viacero využití.
+
+Existuje hneď niekoľko prípadov, kedy je lepšie použiť nerelačnú databázu namiesto relačnej databázy. Keď je potrebné, aby aplikácia dokázala spracovávať rôzne typy a tvary dát a spravovať aplikáciu efektívnejšie pri rozširovaní, je rozhodne výhodnejšie použiť nerelačnú databázu. Niektoré databázy, ako napríklad dokumentová databáza MongoDB uľahčuje vývoj aplikácií, keďže jeho dokumentová štruktúra dát je jednoducho namapovateľná na moderné, objektovo-orientované programovacie jazyky a tým pádom nie je potreba využívať komplexnú objektovo-relačnú mapovaciu vrstvu, ktorá je nutná pri použití relačných databáz na prevod objektov z programovacie jazyka na perzistentné objekty v databáze. Všeobecne je omnoho ľahšie rozšíriť schému / model nerelačnej databázy ako rozširovať schému relačnej databázy~\cite{MongoDBvsMySQLCompared}.
+
+My budeme využívať dokumentovú databázu, konkrétne MongoDB, na ukladanie spracovaných dát. Keďže skoro každý text a veta je odlišná, tak pre každý text a vetu budeme ukladať, odlišné alebo odlišný počet dát, a preto a aj pre ostatné vlastnosti dokumentovej databázy MongoDB podrobnejšie opísané v kapitole ..., bola voľba tejto databázy jednoznačná.
+
+%
+% Typy nerelačných databáz
+%\\
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsection{Typy nerelačných databáz}
+}
+{
+	\%section{Subsection}
+	\section{Typy nerelačných databáz}
+}
+\label{subsection:types_of_norelation_dbs}
+Nerelačné databázy majú niekoľko typov, v nasledujúcich kapitolách si priblížíme hlavné z nich.
+
+%
+% Kľúč - hodnota databázy
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsubsection{Kľúč - hodnota databázy}
+}
+{
+	\%section{Subsection}
+	\subsection{Kľúč - hodnota databázy}
+}
+\label{subsubsection:key_value_db}
+Nerelačné databázy typu kľúč - hodnota sú v svojej podstate celkom jednoduché, ale zároveň efektívne. Umožňujú používateľovi ukladať dáta ľubovolne, kedže neobsahujú schémy. Uložené dáta sa skladajú z dvoch častí. Prvá časť je kľuč a druhá časť je hodnota~\cite{NoSQLDBvsRealtionDB}, pričom kľúč je samo-generujúci string a hodnota môže byť takmer čokoľvek, od string, JSON cez BLOB až po dokonca aj obrázok~\cite{MongoDBvsMySQL2015}.
+
+Kľúč - hodnota databázy sú veľmi podobné hašovacím tabuľkám, kde kľúč je indexom do tabuľky, pomocou ktorého používateľ môže pristúpiť k hodnote daného kľúču. Tento typ databáz uprednostňuje rozšíriteľnosť pred konzistenciou. Ponúka vysokú konkurenčnosť (angl. concurrency), rýchle vyhľadávanie a schopnosť uloženia veľkého množstva dát za cenu spojovacích a agregačných operácií. Taktiež je veľmi náročné vytvoriť ľubovolný pohľad na dáta z dôvodu chýbajúcej schémy~\cite{NoSQLDBvsRealtionDB}.
+
+Najznámejšími predstaviteľmi tohto typu databáz sú \textit{Amazon DynamoDB} a \textit{RIAK}.
+
+%
+% Dokumentové databázy
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsubsection{Dokumentové databázy}
+}
+{
+	\%section{Subsection}
+	\subsection{Dokumentové databázy}
+}
+\label{subsubsection:document_db}
+Dokumentové databázy ukladajú dáta vo forme dokumentov, vďaka čomu ponúkajú vysoký výkon a horizontálnu rozšíriteľnosť~\cite{NoSQLDBvsRealtionDB}. Uložené dokumenty možu nadobúdať rôzne typy, ako napríklad JSON, BSON, XML a BLOB, ktoré poskytujú veľkú flexibilnosť pre dáta~\cite{MongoDBvsMySQLCompared}. Každý záznam v takejto databáze preto môže mať inú štruktúru, napríklad počet alebo typ polí, čo šetrí úložným priestorom, keďže neobsahuje nepotrebné prázdne polia~\cite{NoSQLDBvsRealtionDB}.
+
+Dokumenty v databáze sú referencované kľúčom, ktorý môže byť string, cesta, ale dokonca aj dokument~\cite{NoSQLDBvsRealtionDB}. Majú dynamickú schému, čo umožňuje vytvárať záznamy bez toho, aby bolo potrebné predtým definovať štruktúru. Uľahčujú zmenu štruktúry záznamov jednoduchým pridaním, odstránením alebo zmenením typu poľa. Vďaka svojej štruktúre sú dokumenty ľahko namapovateľné na objekty z objektovo-orientovaných programovacích jazykov a odstraňujú tým potrebu pre použitie objektovo-relačnej mapovacej vrstvy~\cite{MongoDBvsMySQLCompared}.
+\\
+
+Primárne využitie týchto databáz je v aplikáciách, ktoré potrebujú ukladať dáta, ktorých štruktúra je vopred neznáma alebo sa mení. Predstaviteľmi sú napríklad \textit{MongoDB} alebo \textit{CouchDB} databázy.
+
+%
+% Stĺpcové databázy
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsubsection{Stĺpcové databázy}
+}
+{
+	\%section{Subsection}
+	\subsection{Stĺpcové databázy}
+}
+\label{subsubsection:column_db}
+Stĺpcové databázy musia mať preddefinovanú schému, v ktorej sú jednotlivé bunky záznamov zoskupené do kolekcie stĺpcov~\cite{MongoDBvsMySQL2015}. Dáta nie su ukladané do tabuliek, ale do masívne distribuovaných architektúr, za hlavným zámerom, aby agregácia dát môže prebehnúť veľmi rýchlo s redukovaním I/O aktivity.
+
+Tento typ databáz taktiež poskytuje veľkú rozšíriteľnosť v ukladaní dát.
+
+Najvhodnejšie je využívať takéto databázy v analytických aplikáciách alebo aplikáciach, ktoré získavajú dáta pomocou metódy \textit{data mining}~\cite{NoSQLDBvsRealtionDB}.
+
+%
+% Grafové databázy
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsubsection{Grafové databázy}
+}
+{
+	\%section{Subsection}
+	\subsection{grafové databázy}
+}
+\label{subsubsection:graph_db}
+Grafové databázy su špeciálny typ databáz, v ktorých sú dáta uložene vo forme grafu. Graf pozostáva z vrcholov a hrán, pričom vrcholy predstavujú objekty a hrany reprezentujú vzťahy medzi nimi. Každý vrchol okrem iného obsahuje aj pointer na priľahlé vrcholy, čo umožňuje prechádzať obrovské množstvo dát v rýchlejšie ako relačné databázy~\cite{NoSQLDBvsRealtionDB}.
+
+Údaje sa ukladajú v polo-štruktúrovanej forme, kde je kladený hlavný dôraz na prepojenia medzi dátami. Grafové databázy spĺňajú vlastnosť ACID a sú veľmi vhodné pre biometrické aplikácie alebo aplikácie sociálnych sieti. Hlavným predstaviteľom grafových databáz je \textit{Neo4j}~\cite{NoSQLDBvsRealtionDB}.
+
+%
+% Objektovo orientované databázy
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsubsection{Objektovo orientované databázy}
+}
+{
+	\%section{Subsection}
+	\subsection{Objektovo orientované databázy databázy}
+}
+\label{subsubsection:object_oriented_db}
+Objektovo orientované databázy ukladajú dáta vo forme objektov, rovnako ako sú údaje reprezentované v objektoch v objektovo orientovaných programovacích jazykoch (OOP). Tieto databázy podporujú všetky vymoženosti OOP, ako enkapsulácia, polymorfizmus, ale aj dedenie. Tento typ nerelačných databáz robia moderný vývoj softvéru jednoduchším~\cite{NoSQLDBvsRealtionDB}.
+
+%
+% MongoDB
+%
+\ifthenelse {\boolean{bachelor}}
+{
+	%\subsection{Subsection}
+	\subsection{MongoDB}
+}
+{
+	\%section{Subsection}
+	\section{MongoDB}
+}
+\label{subsection:mongodb}
+MongoDB je dokumentová nerelačná databáza vytvorená v C++ spustená v roku 2009~\cite{NoSQLDBvsRealtionDB}. Ukladá dáta v dokumentoch vo formáte BSON (Binary JSON), ktorých štruktúra sa môže meniť. Využíva dynamickú štruktúru schém, preto dokáže vytvárať záznamy bez preddefinovanej štruktúry dát, ale ta štruktúra sa vytvára za behu, pričom môže byť veľmi jednoducho pozmenená pridaním, odstránením, zmenou typu polia dokumentu určujúceho štruktúru. Umožňuje jednoduché ukladanie dát s hierarchickými vzťahmi alebo komplexnejších štruktúr, ako sú napríklad polia, listy alebo vnorené polia~\cite{MongoDBvsMySQLCompared}.
+
+Vlastnosti ako chybová tolerancia, perzistencia a konzistencia dát sú súčasťou MongoDB. Oproti klasickým dokumentovým databázam ponúka aj vymoženosti, ako agregácia, ad hoc dopyty, indexovanie, a pod. Taktiež má svoj vlastný plnohodnotný dopytovací jazyk \textit{mongo query language}~\cite{NoSQLDBvsRealtionDB}.
+
+MongoDB poskytuje prvky relačných databáz, ktoré ešte rozširuje o ďalšiu funkcionalitu sú zobrazené v tabuľke~\fullref{table:features_of_mongodb} a rozdiely v názvoch sú zobrazene v tabuľke~\fullref{table:names_of_mongodb}, kde bol ako zástupca relačných databáz vybraná MySQL databáza).
+
+\begin{table}[]
+	\centering
+	\caption{Prvky poskytované MongoDB~\cite{MongoDBvsMySQLCompared}}
+	\label{table:features_of_mongodb}
+	\begin{tabular}{|l|l|l|}
+	\hline
+		& \textbf{MySQL} & \textbf{MongoDB} \\ \hline
+		Bohatý dátový model & Nie & Áno \\ \hline
+		Dynamická štruktúra & Nie & Áno \\ \hline
+		Dátové typy & Áno & Áno \\ \hline
+		Lokálnosť dát & Nie & Áno \\ \hline
+		Aktualizovanie polí & Áno & Áno \\ \hline
+		Ľahké pre programátorov & Nie & Áno \\ \hline
+		Komplexné transakcie & Áno & Nie \\ \hline
+		Kontrola & Áno & Áno \\ \hline
+		Auto-sharding & Nie & Áno \\ \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[]
+	\centering
+	\caption{Porovnanie konvencie názvov~\cite{MongoDBvsMySQL2015}}
+	\label{table:names_of_mongodb}
+	\begin{tabular}{|l|l|}
+	\hline
+		\textbf{MySQL} & \textbf{MongoDB} \\ \hline
+		Databáza & Databáza \\ \hline
+		Tabuľka & Kolekcia \\ \hline
+		Index & Index \\ \hline
+		Riadok & BSON dokument \\ \hline
+		Stĺpec & BSON pole (angl. field) \\ \hline
+		Spojenie & Vnorené dokumenty a prepojenie \\ \hline
+		Primárny kľúč & Primárny kľúč \\ \hline
+		Zoskupenie & Agregácia \\ \hline
+	\end{tabular}
+\end{table}
